added cont scroll and all static feel content

--- a/app/webroot/appsrc/src/templates/project.html
+++ b/app/webroot/appsrc/src/templates/project.html
@@ -1,11 +1,11 @@
 <!-- inside .INSIDEPAGE .CONTENT  -->
-<h1>Hello! Welcome to our Design for Change portal. </h1>
+<!-- <h1>Hello! Welcome to our Design for Change portal. </h1>
   <p><span style="font-size: 12pt; line-height: 23pt;">Design for Change is a program that challenges youth to design and implement social change projects in their communities. Our mission is to ensure that youth have the opportunities and mentorship to strengthen and apply their character, capacity, and confidence.</span></p>
   <p>So how do we do this? Well, we believe that young people need both relevant, impactful experiences as well as guidance to become empowered contributors to their communities. Here at Design for Change, we even call our youth participants \"Change Makers\" - letting them know from the very beginning that we believe in their abilities to make and create an impact. </p>
   <p>So, Design for Change is that critical learning experience by providing the challenge to create, implement, and share a project to change their community.</p>
   <p>What else do they need? YOU! You are our Change Mentor, providing the guidance for your team of youth to develop their skills in the real world, building their confidence, and growing as makers of change.</p>
   <p>DFC depends on you and all other Change Mentors to take youth through a simple four-step process called Feel Imagine Do Share. Among other things, these stages develop your team's abilities in EMPATHY, CREATIVITY, INITIATIVE, and COLLABORATION - culminating in an amazing project that solves a problem in your community.</p>
-  <p>We will provide you with knowledge, activities, training, and support throughout this portal - empowering you with the tools to guide your youth to create change. We're excited to have you on board!</p>
+   <p>We will provide you with knowledge, activities, training, and support throughout this portal - empowering you with the tools to guide your youth to create change. We're excited to have you on board!</p>-->
 <!-- FEEL STAGE-->
 <h1>The FEEL Stage</h1>
   <p>In FEEL your Change Makers will develop a heightened awareness of themselves and their surroundings which will lead them to feel a stronger sense of empathy - the ability to relate to, and take other people's perspective.Together awareness, empathy and working on meaningful real world issues will lead to increased engagement - change makers who will be intrinsically motivated to create positive change in their own communities.Now let's get out there and empathize!</p>
@@ -38,60 +38,47 @@
     <p></p>
 <!-- FEEL SKILLS -->
 <h1><span style="font-weight: normal;">FEEL Skills</span></h1>
-  <p></p>
-<!-- tag here? -->
-<section class="panel clearfix skillsBox">
+
+
+<!-- <section class="panel clearfix skillsBox">
   <div class="wizard wizard-vertical clearfix" id="wizard-2">
     <ul class="steps">
-
-      <input type="radio" id="zskills" name="feels"><label for="zskills">
-        <li class="step changeSkill"><span class="badge badge-info">1</span>Feel Activities</li></label>
-        <div class="reveal-if-active-skillsAll">
-          <div class="step-pane step-content" id="all">
-            <ul>
-              <li>All activities in the Feel stage are listed below.<br> </li>
-              <li>You can also click on each skill at the left to show activities that teach that specific skill.</li>
-            </ul>
-          </div>
-        </div>
-
-      <input type="radio" id="zempathy" name="feels"><label for="zempathy">
-      <li class="step changeSkill"><span class="badge badge-info">2</span>Empathy</li></label>
-      <div class="reveal-if-active-skillsEmpathy">
-        <div class="step-pane step-content" id="Empathy">
-          <ul>
-            <li>Ability to sense other people's emotions and thoughts, especially by imagining someone else's perspective in what they are thinking and feeling<br> </li>
-            <li>Empathy allows you to truly understand how and why people are affected by the issues that surround them, and what solutions could truly impact the problem. </li>
-          </ul>
-        </div>
-      </div>
+      <li class="step"><a href="javascript:void(0)" class="changeSkill" data-target="#all" data-skill="all"><span class="badge badge-info">1</span>Feel Activities</a></li>
+      <li class="step"><a href="javascript:void(0)" class="changeSkill" data-target="#Empathy" data-skill="Empathy"><span class="badge badge-info">2</span>Empathy</a></li>
       <li class="step"><a href="javascript:void(0)" class="changeSkill" data-target="#Awareness" data-skill="Awareness"><span class="badge badge-info">3</span>Awareness</a></li>
-        <div class="step-pane step-content" id="Awareness">
-          <ul>
-            <li>Ability to show a true understanding of yourself and others, by being conscious of your own thoughts and actions as well as of those around you</li>
-            <li>It is important to be aware of the people, places, and things around you, in order to be conscious and fully sensitive to the problems that you and your community may be facing and what can be used to solve them. </li>
-          </ul>
-        </div>
       <li class="step"><a href="javascript:void(0)" class="changeSkill" data-target="#Engagement" data-skill="Engagement"><span class="badge badge-info">4</span>Engagement</a></li>
-       <div class="step-pane step-content" id="Engagement">
-        <ul>
-          <li>Ability to be proactively, attentively, and passionately committed to tasks at hand as well as enthusiastic about interacting with the world around you, because you see how you fit into achieving an end goal. </li>
-          <li>Engagement is critical for motivation - you care about interacting with your community and your team because you see how you are a part of it and how you can change it. </li>
-        </ul>
-      </div>
     </ul>
   </div>
-
-
-  <div class="step-content"> perserver this in every pane
-
-
-
-
+  <div class="step-content">
+    <div class="step-pane active" id="all">
+      <ul>
+        <li>All activities in the Feel stage are listed below.</li>
+        <li>You can also click on each skill at the left to show activities that teach that specific skill.</li>
+      </ul>
+    </div>
+    <div class="step-pane" id="Empathy">
+      <ul>
+        <li>Ability to sense other people's emotions and thoughts, especially by imagining someone else's perspective in what they are thinking and feeling<br> </li>
+        <li>Empathy allows you to truly understand how and why people are affected by the issues that surround them, and what solutions could truly impact the problem. </li>
+      </ul>
+    </div>
+    <div class="step-pane" id="Awareness">
+      <ul>
+        <li>Ability to show a true understanding of yourself and others, by being conscious of your own thoughts and actions as well as of those around you</li>
+        <li>It is important to be aware of the people, places, and things around you, in order to be conscious and fully sensitive to the problems that you and your community may be facing and what can be used to solve them. </li>
+      </ul>
+    </div>
+    <div class="step-pane" id="Engagement">
+      <ul>
+        <li>Ability to be proactively, attentively, and passionately committed to tasks at hand as well as enthusiastic about interacting with the world around you, because you see how you fit into achieving an end goal. </li>
+        <li>Engagement is critical for motivation - you care about interacting with your community and your team because you see how you are a part of it and how you can change it. </li>
+      </ul>
+    </div>
   </div>
-</section>
+</section> -->
 
-<script type="text/mustache-template" id="skillsTemplate">
+
+<!-- <script type="text/mustache-template" id="skillsTemplate">
   {{{content.content_obj.skills.text}}}
   <section class="panel clearfix skillsBox">
     <div class="wizard wizard-vertical clearfix" id="wizard-2">
@@ -161,7 +148,7 @@
   <div class="activities">
   </div>
 </script>
-<!-- COMPLETE THE STAGE -->
+
 
 <p> </p>
 <h1>Deliverables for FEEL</h1>
@@ -202,7 +189,7 @@
       </form>
     </div>
   </div>
-</section>
+</section> -->
 
 
 <!-- <h1>The IMAGINE Stage</h1>\n
