combined stage view

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -327,7 +327,7 @@
 	<div class="clear"></div>
 </script>
 
-<script type="text/mustache-template" id="homeTemplate">
+<script type="text/mustache-template" id="getting_startedTemplate">
 	<div class="float hide">
 		<iframe width="400" height="200" src="//www.youtube.com/embed/{{content.content_obj.getting_started.video}}?rel=0" frameborder="0" allowfullscreen></iframe>
 	</div>
