--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -315,6 +315,7 @@
 
 <script type="text/mustache-template" id="stageLeftNavTemplate">
 	<h1><img src="/dfcusa-pm/app/webroot/images/icon_{{stage}}_selected.png" class="stageicon">{{ucWords stage}}</h1>
+  <div id="main">
 	<ul>
 	  <li class="goToSection" data-section="home"><a href="#project/{{project}}/{{stage}}/home"><p>The {{ucWords stage}} Stage</p></a></li>
 	   <li class="goToSection" data-section="why"><a href="#why_feel"><p>Why {{ucWords stage}}</p></a></li>
@@ -323,6 +324,7 @@
 	  <li class="goToSection" data-section="submit"><a href="#feel_submit"><p>Complete This Stage</p></a></li>
 	  <li class="goToSection pull-left" data-section="back"><a href="#project/{{project}}/home"><p style="font-size: 10pt; margin-left: 20px">< back to home</p></a></li>
 	</ul>
+  </div>
 	<div class="clear"></div>
 </script>
 
