progressbar update on leftnav click

--- a/app/webroot/css/dfcusa_pm.css
+++ b/app/webroot/css/dfcusa_pm.css
@@ -338,55 +338,8 @@ small {
 }
 
 
-
-
-/*======radio button feel activities======*/
-
-/*.reveal-if-active-skillsAll {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-}*/
-
-/*input[type="radio"]:checked ~ .reveal-if-active-skillsAll {
-  opacity: 1;
-  max-height: 100px;
-  overflow: visible;
-}*/
-
-/*.reveal-if-active-skillsEmpathy{
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
+/*progressbar*/
+.progress-bar{
+  display:block;
+  text-align: center;
 }
-
-input[type="radio"]:checked ~ .reveal-if-active-skillsEmpathy {
-  opacity: 1;
-  max-height: 100px;
-  overflow: hidden;
-}
-
-.reveal-if-active-skillsAwareness {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-}
-
-input[type="radio"]:checked ~ .reveal-if-active-skillsAwareness {
-  opacity: 1;
-  max-height: 100px;
-  overflow: visible;
-}
-
-.reveal-if-active-skillsEngagement {
-  opacity: 0;
-  max-height: 0;
-  overflow: hidden;
-}
-
-input[type="radio"]:checked ~ .reveal-if-active-skillsEngagement {
-  opacity: 1;
-  max-height: 100px;
-  overflow: visible;
-}
-*/
