--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -317,14 +317,21 @@
 	<h1><img src="/dfcusa-pm/app/webroot/images/icon_{{stage}}_selected.png" class="stageicon">{{ucWords stage}}</h1>
   <div id="main">
   	<ul>
-  	  <li class="goToSection" data-section="home"><a href="#project/{{project}}/{{stage}}/home"><p>The {{ucWords stage}} Stage</p></a></li>
-  	   <li class="goToSection" data-section="why"><a href="#why_feel"><p>Why {{ucWords stage}}</p></a></li>
-  	  <li class="goToSection" data-section="skills"><a href="#feel_skills"><p>Skills & Activities</p></a></li>
+  	  <li class="goToSection one" data-section="home"><a href="#project/{{project}}/{{stage}}/home"><p>The {{ucWords stage}} Stage</p></a></li>
+  	   <li class="goToSection two" data-section="why"><a href="#why_feel"><p>Why {{ucWords stage}}</p></a></li>
+  	  <li class="goToSection three" data-section="skills"><a href="#feel_skills"><p>Skills & Activities</p></a></li>
   	  <li class="goToSection hide" data-section="activities"><a href="#feel_activities"><p>Activities</p></a></li>
-  	  <li class="goToSection" data-section="submit"><a href="#feel_submit"><p>Complete This Stage</p></a></li>
+  	  <li class="goToSection four" data-section="submit"><a href="#feel_submit"><p>Complete This Stage</p></a></li>
   	  <li class="goToSection pull-left" data-section="back"><a href="#project/{{project}}/home"><p style="font-size: 10pt; margin-left: 20px">< back to home</p></a></li>
   	</ul>
+    <br><br>
   </div>
+  <br><br>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%">
+        <p>20 Minutes</p>
+      </div>
+    </div>
 	<div class="clear"></div>
 </script>
 
