started nav highlight on scroll

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -329,7 +329,7 @@
   <br><br>
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:0%">
-        <p>20 Minutes</p>
+        <p></p>
       </div>
     </div>
 	<div class="clear"></div>
@@ -345,6 +345,7 @@
 
 <script type="text/mustache-template" id="whyTemplate">
   <a name="why_feel">
+  <div id="testdiv"></div>
   <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
 	{{{content.content_obj.why.text}}}
 </script>
