trouble picking up upload file click

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -495,6 +495,8 @@
 	        {{{activity.description}}}
 	      </p>
 	      <a href="{{activity.pdf}}" target="_new" class="btn btn-success btn-xs"><i class="fa fa-file-text"></i> View Activity</a>
+        <button type="button" class="btn btn-primary btn-sm uploadProjectFile"><i class="fa fa-file"></i> Upload File</button>
+            <input class="input-large uploadFile hide" type="file" id="pdf" name="file"/>
 	      <small class="pull-right hide">
 	        <a href="#"><i class="fa fa-comment-o"></i> Comments ({{activity.comments_count}})</a>
 	      </small>
