--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -22,7 +22,7 @@
 	</div>
 </script>
 
- roadmap
+ <!-- roadmap
 <script type="text/mustache-template" id="roadmapTemplate">
   <h1>Your Project</h1>
   <ul class="projecthome">
@@ -35,7 +35,7 @@
     <li onclick="javascript:location.href = '#project/{{project}}/home/files';" class="goToSection" data-section="files"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon hide">Your Video</p></li>
   </ul>
   <div class="clear"></div>
-</script>
+</script> -->
 
 
 
