getting started lads to feel, steps template accuractly directing

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -26,7 +26,7 @@
 <script type="text/mustache-template" id="roadmapTemplate">
   <h1>Your Project</h1>
   <ul class="projecthome">
-    <a href ="#project/{{self.iProjectId}}/feel"><li data-section="home"><p><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png" class="stageicon">Getting Started</p></li></a>
+    <a href ="#project/{{project}}/feel"><li data-section="home"><p><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png" class="stageicon">Getting Started</p></li></a>
     <li class="steps"><p><img src="/dfcusa-pm/app/webroot/images/icon_feel.png" class="stageicon hide steps">Steps</p></li>
     <li onclick="javascript:location.href = '#project/{{project}}/imagine';"><p><img src="/dfcusa-pm/app/webroot/images/icon_imagine.png" class="stageicon hide">Time</p></li>
      <li onclick="javascript:location.href = '#project/{{project}}/do';"><p><img src="/dfcusa-pm/app/webroot/images/icon_do.png" class="stageicon hide">Resources</p></li>
@@ -43,6 +43,15 @@
 
 <p>Sit adhuc saepe in, saperet mandamus usu ne, eos facilisi imperdiet no. Te usu sale dolor neglegentur, ius ea minim hendrerit pertinacia. Erant persius accommodare usu ad, cu sea tritani impedit scaevola. Ea vel vero principes forensibus, vim labitur definitiones ea, eum eius patrioque at. Has eu latine sensibus.</p>
 </script>
+
+<script type="text/mustache-template" id="timeTemplate">
+<h1>Time</h1>
+  <p>Lorem ipsum dolor sit amet, eam consulatu sadipscing et. Cum enim nostro no, eu nam suas purto urbanitas, quem agam denique ex vix. Nostrum explicari aliquando id mea, qui partem aperiri assentior ei. Nec an adhuc maiorum menandri. Ei sed aliquando adipiscing, has commodo scaevola ut, est euismod dolorem adversarium ea.</p>
+
+<p>Sit adhuc saepe in, saperet mandamus usu ne, eos facilisi imperdiet no. Te usu sale dolor neglegentur, ius ea minim hendrerit pertinacia. Erant persius accommodare usu ad, cu sea tritani impedit scaevola. Ea vel vero principes forensibus, vim labitur definitiones ea, eum eius patrioque at. Has eu latine sensibus.</p>
+</script>
+
+
 
 
 
