--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -527,6 +527,9 @@
 	  </div>
 	</section>
 </div>
+<button type="button" class="btn btn-default btn-lg nextStepImagine">
+  <span aria-hidden="true"></span> Next Section
+</button>
 </script>
 
 <script type="text/mustache-template" id="activityTemplate">
