squashed small portal guide bug

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -66,7 +66,7 @@
 </script>
 
 <script type="text/mustache-template" id="portalGuideTemplate">
-<h1>Sample Projects</h1>
+<h1>Portal Guide</h1>
   <p>Lorem ipsum dolor sit amet, eam consulatu sadipscing et. Cum enim nostro no, eu nam suas purto urbanitas, quem agam denique ex vix. Nostrum explicari aliquando id mea, qui partem aperiri assentior ei. Nec an adhuc maiorum menandri. Ei sed aliquando adipiscing, has commodo scaevola ut, est euismod dolorem adversarium ea.</p>
 
 <p>Sit adhuc saepe in, saperet mandamus usu ne, eos facilisi imperdiet no. Te usu sale dolor neglegentur, ius ea minim hendrerit pertinacia. Erant persius accommodare usu ad, cu sea tritani impedit scaevola. Ea vel vero principes forensibus, vim labitur definitiones ea, eum eius patrioque at. Has eu latine sensibus.</p>
