--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -1,3 +1,5 @@
+<script src="../../js/noframework.waypoints.js"></script>
+
 <script type="text/mustache-template" id="contentTemplate">
 	<div class="insidepage">
     <div class="fullcontentview">
