trying to work in in waypoint

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -490,6 +490,7 @@
 <script type="text/mustache-template" id="submitTemplate">
   <a name="feel_submit">
   <img src="http://upload.wikimedia.org/wikipedia/commons/thumb/9/9d/Sunday_Comic_Strip_Layout_Third_Page.png/800px-Sunday_Comic_Strip_Layout_Third_Page.png" alt="comic strip">
+  <div id="basic-waypoint"></div>
   <div id="4">
 	{{{content.content_obj.submit.text}}}
 	<section class="tab-pane active" id="wizard">
