found ligher solution around using scroll. long if statement, light but not pretty. works until something else implimented

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -4,7 +4,8 @@
 	<div class="insidepage">
     <div class="fullcontentview">
     </div>
-	  <div class="contents">
+	  <div class="contents" meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 	  </div>
 	</div>
