nav bar feel scroll on page scroll, temp solution

--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -29,7 +29,7 @@
 <script type="text/mustache-template" id="roadmapTemplate">
   <h1>Your Project</h1>
   <ul class="projecthome">
-    <a href ="#project/{{project}}/feel"><li data-section="home"><p><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png" class="stageicon">Getting Started</p></li></a>
+    <a href ="#project/{{project}}/feel"><li data-section="home"><p><img data-stage-icon="home" src="/dfcusa-pm/app/webroot/images/icon_home.png" class="stageicon">Get Started</p></li></a>
     <li class="steps"><p><img src="/dfcusa-pm/app/webroot/images/icon_feel.png" class="stageicon hide steps">Steps</p></li>
     <li class="time"><p><img src="/dfcusa-pm/app/webroot/images/icon_imagine.png" class="stageicon hide">Time</p></li>
      <li class="resources"><p><img src="/dfcusa-pm/app/webroot/images/icon_do.png" class="stageicon hide">Resources</p></li>
