--- a/app/webroot/appsrc/src/templates/home.html
+++ b/app/webroot/appsrc/src/templates/home.html
@@ -35,7 +35,7 @@
      <li class="resources"><p><img src="/dfcusa-pm/app/webroot/images/icon_do.png" class="stageicon hide">Resources</p></li>
      <li class="sampleProjects"><p><img src="/dfcusa-pm/app/webroot/images/icon_share.png" class="stageicon hide">Sample Projects</p></li>
     <li class="portalGuide"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon hide">Portal Guide</p></li>
-    <li onclick="javascript:location.href = '#project/{{project}}/home/files';" class="goToSection" data-section="files"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon hide">Your Video</p></li>
+    <li onclick="javascript:location.href = '#project/{{project}}/home/files';" class="goToSection yourVideo" data-section="files"><p><img data-stage-icon="files" src="/dfcusa-pm/app/webroot/images/icon_files.png" class="stageicon hide">Your Video</p></li>
   </ul>
   <div class="clear"></div>
 </script>
